telco-online-boutique/istio-manifests/gw-boutique.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: # kpt-merge: frontend/frontend-gateway
  name: gw-hipster
  namespace: frontend
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
