telco-online-boutique/istio-manifests/vs-boutique.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: frontend/frontend-ingress
  name: vs-boutique
  namespace: frontend
spec:
  hosts:
  - "*"
  gateways:
  - gw-hipster
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
